--- a/New folder (3)/main.css
+++ b/New folder (3)/main.css
@@ -13,7 +13,7 @@ body {
 
 .card {
   width: 90%;
-  max-width: 470px;
+  max-width: 500px;
   background: linear-gradient(135deg, #00feba, #5b548a);
   color: #fff;
   margin: 100px auto 0;
@@ -24,6 +24,7 @@ body {
 .search {
   width: 100%;
   display: flex;
+  gap: 5px;
   align-items: center;
   justify-content: space-between;
 }
@@ -32,11 +33,11 @@ body {
   outline: none;
   background-color: #ebfffc;
   color: #555;
-  padding: 10px 25px;
-  height: 60px;
+  padding: 0;
+  width: 100%;
+  height: 40px;
   border-radius: 30px;
-  flex: 1;
-  margin-right: 16px;
+  /* flex: 1;   */
   font-size: 18px;
 }
 
@@ -45,8 +46,8 @@ body {
   outline: none;
   background-color: #ebfffc;
   border-radius: 50%;
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   cursor: pointer;
 }
 .search button img {
@@ -68,7 +69,7 @@ body {
 }
 
 .details {
-  display: flex;
+
   align-items: center;
   justify-content: space-between;
   padding: 0px 20px;
@@ -76,6 +77,8 @@ body {
 }
 
 .col {
+  gap: 10px;
+  margin-bottom: 30px;
   display: flex;
   align-items: center;
   text-align: left;
@@ -95,3 +98,4 @@ body {
   font-size: 18px;
   margin-top: 10px;
 }
+
